--- a/travel_portal.yaml
+++ b/travel_portal.yaml
@@ -7,7 +7,7 @@ spec:
   template:
     metadata:
       annotations:
-        readiness.status.sidecar.istio.io/applicationPorts: ""
+        sidecar.istio.io/inject: "true"
       labels:
         app: rome-portal
         version: web
@@ -37,7 +37,7 @@ spec:
   template:
     metadata:
       annotations:
-        readiness.status.sidecar.istio.io/applicationPorts: ""
+        sidecar.istio.io/inject: "true"
       labels:
         app: rome-portal
         version: vip
@@ -69,7 +69,7 @@ spec:
   template:
     metadata:
       annotations:
-        readiness.status.sidecar.istio.io/applicationPorts: ""
+        sidecar.istio.io/inject: "true"
       labels:
         app: paris-portal
         version: web
@@ -99,7 +99,7 @@ spec:
   template:
     metadata:
       annotations:
-        readiness.status.sidecar.istio.io/applicationPorts: ""
+        sidecar.istio.io/inject: "true"
       labels:
         app: paris-portal
         version: vip
@@ -131,7 +131,7 @@ spec:
   template:
     metadata:
       annotations:
-        readiness.status.sidecar.istio.io/applicationPorts: ""
+        sidecar.istio.io/inject: "true"
       labels:
         app: london-portal
         version: web
@@ -161,7 +161,7 @@ spec:
   template:
     metadata:
       annotations:
-        readiness.status.sidecar.istio.io/applicationPorts: ""
+        sidecar.istio.io/inject: "true"
       labels:
         app: london-portal
         version: vip
